# attrition-app

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  test_setup.py
.github/workflows/: cd.yml  ci.yml  train.yml
mlruns/0/: meta.yaml
mlruns/529209643183202858/: meta.yaml
mlruns/529209643183202858/e9c02ce0e9984d56b9bf0aa388eb61b2/: meta.yaml
mlruns/529209643183202858/e9c02ce0e9984d56b9bf0aa388eb61b2/artifacts/: feature_importance.csv
mlruns/529209643183202858/e9c02ce0e9984d56b9bf0aa388eb61b2/metrics/: accuracy  f1_score  precision  recall  roc_auc
mlruns/529209643183202858/e9c02ce0e9984d56b9bf0aa388eb61b2/outputs/m-9dfc39d6828249198220088baafe3059/: meta.yaml
mlruns/529209643183202858/e9c02ce0e9984d56b9bf0aa388eb61b2/tags/: mlflow.runName
mlruns/529209643183202858/models/m-9dfc39d6828249198220088baafe3059/: meta.yaml
mlruns/529209643183202858/models/m-9dfc39d6828249198220088baafe3059/artifacts/: MLmodel  conda.yaml  input_example.json  model.pkl  python_env.yaml  registered_model_meta  requirements.txt  serving_input_example.json
mlruns/529209643183202858/models/m-9dfc39d6828249198220088baafe3059/metrics/: accuracy  f1_score  precision  recall  roc_auc
mlruns/models/attrition_model/: meta.yaml
mlruns/models/attrition_model/version-1/: meta.yaml
mlruns/models/attrition_model/version-2/: meta.yaml
models/: feature_names.pkl  label_encoders.pkl  model.pkl
src/api/: main.py
src/models/: train.py
src/static/: index.html  script.js  style.css
(+1 files in other folders)
